# lab2-pascal_execution_env

./: .gitignore  Algorithms_and_objects.md  CMakeLists.txt  README.md  pascal_minus_minus_ide.sln  Акимов_Гусев_Отчет_ЛБ2.docx
Debug/: gtest.lib  pascal_minus_minus_ide_lib.idb  pascal_minus_minus_ide_lib.lib
Pascal_Execution_Env_sln/: Pascal_Execution_Env_sln.sln
Pascal_Execution_Env_sln/Gtest_project/: Gtest_project.vcxproj
Pascal_Execution_Env_sln/Gtest_project/x64/Debug/: vc143.idb
Pascal_Execution_Env_sln/Gtest_project/x64/Debug/Gtest_project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Gtest_project.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Pascal_Execution_Env_sln/Main_project/: Main_project.vcxproj
Pascal_Execution_Env_sln/Main_project/x64/Debug/: Main_project.exe.recipe
Pascal_Execution_Env_sln/x64/Debug/: Gtest_project.idb
gtest/: gtest-all.cc  gtest.h
pascal_minus_minus_ide/: 0  1  2  3  4  5  CMakeLists.txt  pascal_minus_minus_ide.sln  pascal_minus_minus_ide.vcxproj  pascal_minus_minus_ide.vcxproj.filters  pascal_minus_minus_tests.vcxproj
pascal_minus_minus_ide/Debug/: pascal_minus_minus_ide.exe.recipe  pascal_minus_minus_ide.ilk  vc143.idb
pascal_minus_minus_ide/Debug/pascal_m.4854D7B0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  pascal_minus_minus_ide.lastbuildstate
pascal_minus_minus_ide/header/: ast.h  error_reporter.h  interfaces.h  interpreter.h  lexer.h  logger.h  parser.h  postfix.h  symbol_table.h
pascal_minus_minus_ide/include/: ast.h  interfaces.h  interpreter.h  lexer.h  logger.h  parser.h  postfix.h  symbol_table.h  type_checker.h
pascal_minus_minus_ide/pascal_minus_minus_ide/: 0  1  2  3  4  oleg  oleg2  pascal_minus_minus_ide.vcxproj  pascal_minus_minus_ide.vcxproj.filters
pascal_minus_minus_ide/pascal_minus_minus_ide/x64/Debug/: pascal_minus_minus_ide.exe.recipe  pascal_minus_minus_ide.ilk  vc143.idb
pascal_minus_minus_ide/pascal_minus_minus_ide/x64/Debug/pascal_m.fee6efa8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  pascal_minus_minus_ide.lastbuildstate
pascal_minus_minus_ide/source/: interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  postfix.cpp  symbol_table.cpp
pascal_minus_minus_ide/tests/: CMakeLists.txt  pascal_minus_minus_tests.vcxproj  test_interpreter.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_postfix.cpp  test_symbol_table.cpp
pascal_minus_minus_ide/tests/x64/Debug/: vc143.idb
pascal_minus_minus_ide/tests/x64/Debug/pascal_m.a2e6f7c8.tlog/: CL.command.1.tlog  pascal_minus_minus_tests.lastbuildstate
pascal_minus_minus_ide_lib/: pascal_minus_minus_ide_lib.vcxproj
pascal_minus_minus_ide_lib/Debug/pascal_m.A1B2C3D4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog
pascal_minus_minus_ide_lib/header/: error_reporter.h  interpreter.h  lexer.h  symbol_table.h
pascal_minus_minus_ide_lib/source/: interpreter.cpp  lexer.cpp  parser.cpp  postfix.cpp  symbol_table.cpp
pascal_minus_minus_ide_tests/: pascal_minus_minus_ide_tests.vcxproj  pascal_minus_minus_ide_tests.vcxproj.filters
pascal_minus_minus_ide_tests/Debug/: pascal_minus_minus_ide_tests.exe.recipe  vc143.idb
pascal_minus_minus_ide_tests/Debug/pascal_m.F266A6B4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
pascal_minus_minus_ide_tests/source/: test_interpreter.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_postfix.cpp  test_symbol_table.cpp
